# document-calculus

./: .gitignore  Dockerfile  README.md  document_calculus.opam  document_calculus.opam.locked  dune-project
.github/workflows/: ci.yaml
lib/: article.ml  base.ml  dune  extensions.ml  open_func.ml  open_func.mli  string.ml
test/: dune  tests.ml
