(lang dune 3.6)

(name document_calculus)

(generate_opam_files true)

(source
 (github cognitive-engineering-lab/document-calculus))

(authors "Will Crichton")

(license "MIT" "Apache-2.0")

(documentation https://url/to/documentation)

(package
 (name document_calculus)
 (synopsis "Accompanying materials for \"A Core Calculus for Documents\" (Crichton and Krishnamurthi 2024).")
 (depends ocaml dune))